playback sample music

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -3,15 +3,22 @@
 
 target 'APIExample' do
   use_frameworks!
-  
-  pod 'Floaty', '~> 4.2.0'  
+
+  pod 'Floaty', '~> 4.2.0'
   pod 'AGEVideoLayout', '~> 1.0.4'
   pod 'AgoraRtcEngine_iOS', '3.7.0'
   pod 'AgoraMediaPlayer_iOS', '1.2.2'
+
+  post_install do |installer|
+    installer.pods_project.build_configurations.each do |config|
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+    end
+  end
 end
 
 target 'Agora-ScreenShare-Extension' do
   use_frameworks!
-  
+
   pod 'AgoraRtcEngine_iOS', '3.7.0'
 end
+
